# imprintor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mix.exs
.github/workflows/: release.yml
lib/: imprintor.ex
lib/imprintor/: config.ex
native/imprintor/: Cargo.toml  README.md
native/imprintor/.cargo/: config.toml
native/imprintor/src/: lib.rs
test/: imprintor_test.exs  typst_plugin_qr.wasm
