[package]
  name = "imprintor"
  version = "0.1.0"
  authors = []
  edition = "2021"

[lib]
  name = "imprintor"
  crate-type = ["cdylib"]

[dependencies]
  rustler = "0.36.2"
  typst = "0.13.1"
  typst-kit = { version = "0.13.1", default-features = false, features = [
    "embed-fonts",
  ] }
  typst-pdf = "0.13.1"
  time = "0.3.36"
  comemo = "0.4"
  serde_json = "1.0"
