[package]
  name = "imprintor"
  version = "0.1.0"
  authors = []
  edition = "2021"

[lib]
  name = "imprintor"
  crate-type = ["cdylib"]

[dependencies]
  rustler = { version = "0.36.2", default-features = false, features = [
    "derive",
  ] }
  typst = "0.13.1"
  typst-kit = { version = "0.13.1", default-features = false, features = [
    "embed-fonts",
  ] }
  typst-pdf = "0.13.1"
  time = "0.3.41"
  serde_json = "1.0.143"
  ureq = "3.1.0"
  tar = "0.4.44"
  zune-inflate = "0.2.54"

[features]
  default = ["nif_version_2_15"]
  nif_version_2_15 = ["rustler/nif_version_2_15"]
  nif_version_2_16 = ["rustler/nif_version_2_16"]
  nif_version_2_17 = ["rustler/nif_version_2_17"]
